--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,108 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Désolé ! La page recherchée n'existe plus !
+   (404)
+    Mais vous pouvez retourner à l'accueil
+   </title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="UTF-8">
+  <style>
+  .rails-default-error-page {
+    background-color: #EFEFEF;
+    color: $dark-gray;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    margin: 0;
+  }
+
+/*  .dialog img {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }*/
+
+  .rails-default-error-page div.dialog {
+    width: 95%;
+    max-width: 33em;
+    margin: 4em auto 0;
+  }
+
+/*  .header{
+    padding-top: 30px;
+}*/
+
+  .rails-default-error-page div.dialog > div {
+    border: 1px solid #CCC;
+    border-right-color: #999;
+    border-left-color: #999;
+    border-bottom-color: #BBB;
+    border-top: #B00100 solid 4px;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    background-color: white;
+    padding: 7px 12% 0;
+    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  }
+
+  .rails-default-error-page h1, p {
+    font-size: 100%;
+    color: $dark-gray;
+    line-height: 1.5em;
+    font-weight: normal;
+  }
+
+  .rails-default-error-page img {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+/*  .rails-default-error-page p {
+    margin: 0 0 1em;
+    padding: 1em;
+    background-color: #F7F7F7;
+    border: 1px solid #CCC;
+    border-right-color: #999;
+    border-left-color: #999;
+    border-bottom-color: #999;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top-color: #DADADA;
+    color: #730E15;
+    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  }
+*/
+  </style>
+</head>
+
+<body class="rails-default-error-page">
+<!-- <div class="banner"> -->
+  <div class="dialog">
+
+    <a href="/"><img src="TREJhome.png" style="width:400px; height:400px;"></a>
+
+    <h1>Désolé ! La page recherchée n'existe plus !  :( </h1>
+    <p>Mais vous pouvez retourner à l'accueil en cliquant sur l'image !</p>
+  </div>
+</body>
+<!-- </div> -->
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html>
+<head>
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
@@ -65,3 +167,4 @@
   </div>
 </body>
 </html>
+ -->
