--- a/public/500.html
+++ b/public/500.html
@@ -71,7 +71,7 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <h1>Désolé ! Petite erreur interne au serveur !  :( </h1>
-    <a href="/"><img src="500.png" style="width:600px; height:500px;"></a>
+    <a href="/"><img src="TREJhome.png" style="width:600px; height:500px;"></a>
     <p>Mais vous pouvez retourner à l'accueil en cliquant sur l'image !</p>
   </div>
 </body>
