public error pages

--- a/public/404.html
+++ b/public/404.html
@@ -53,7 +53,7 @@
 <body class="rails-default-error-page">
   <div class="dialog">
 
-    <a href="/"><img src="TREJhome.png" style="width:400px; height:400px;"></a>
+    <a href="/"><img src="/TREJhome.png" style="width:400px; height:400px;"></a>
 
     <h1>Désolé ! La page recherchée n'existe plus !  :( </h1>
     <p>Mais vous pouvez retourner à l'accueil en cliquant sur l'image !</p>
