--- a/public/500.html
+++ b/public/500.html
@@ -37,7 +37,7 @@
 <body class="rails-default-error-page">
   <div class="dialog">
     <h1>Désolé ! Petite erreur interne au serveur !  :( </h1>
-    <a href="/"><img src="TREJhome.png" style="width:600px; height:500px;"></a>
+    <a href="/"><img src="/TREJhome.png" style="width:600px; height:500px;"></a>
     <p>Mais vous pouvez retourner à l'accueil en cliquant sur l'image !</p>
   </div>
 </body>
