--- a/public/422.html
+++ b/public/422.html
@@ -38,7 +38,7 @@
   <div class="header">
   </div>
   <div class="dialog">
-    <a href="/"><img src="TREJhome.png" style="width:400px; height:400px;"></a>
+    <a href="/"><img src="/TREJhome.png" style="width:400px; height:400px;"></a>
     <h1>Désolé ! La page recherchée n'existe plus !  :( </h1>
     <p>Mais vous pouvez retourner à l'accueil en cliquant sur l'image !</p>
   </div>
