mygreen variable everywhere

--- a/public/422.html
+++ b/public/422.html
@@ -37,10 +37,16 @@
 <body class="rails-default-error-page">
   <div class="header">
   </div>
-  <div class="dialog">
-    <a href="/"><img src="/TREJhome.png" style="width:400px; height:400px;"></a>
-    <h1>Désolé ! La page recherchée n'existe plus !  :( </h1>
-    <p>Mais vous pouvez retourner à l'accueil en cliquant sur l'image !</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="dialog">
+          <a href="/"><img src="/TREJhome.png" style="width:400px; height:400px;"></a>
+          <h1>OUPS ! Vous êtes perdu dans la jungle !</h1>
+          <p>Vous pouvez retourner à l'accueil en cliquant sur l'image !</p>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
