--- a/public/500.html
+++ b/public/500.html
@@ -35,10 +35,16 @@
 </head>
 
 <body class="rails-default-error-page">
-  <div class="dialog">
-    <h1>Désolé ! Petite erreur interne au serveur !  :( </h1>
-    <a href="/"><img src="/TREJhome.png" style="width:600px; height:500px;"></a>
-    <p>Mais vous pouvez retourner à l'accueil en cliquant sur l'image !</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="dialog">
+          <a href="/"><img src="/TREJhome.png" style="width:400px; height:400px;"></a>
+          <h1>Désolé ! Petite erreur interne au serveur. </h1>
+          <p>Vous pouvez retourner à l'accueil en cliquant sur l'image !</p>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
